@@ -147,7 +147,7 @@ module Inflector
   
   def classify(table_name)
     # strip out any leading schema name
-    camelize(singularize(table_name.sub(/.*\./, '')))
+    camelize(singularize(table_name.to_s.sub(/.*\./, '')))
   end
 
   def foreign_key(class_name, separate_class_name_and_id_with_underscore = true)
